force-app/main/default/objects/Student__c/fields/AADHAR__c.field-meta.xml
<CustomField>
    <fullName>AADHAR__c</fullName>
    <label>AADHAR</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>