force-app/main/default/objects/Student__c/fields/Enrollment_Year__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Year__c</fullName>
    <label>Enrollment Year</label>
    <type>Date</type>
</CustomField>