force-app/main/default/objects/Student__c/fields/Parent_College_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_College_Id__c</fullName>
    <formula>College__r.College_Id__c</formula>
    <label>Parent College Id</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>