force-app/main/default/objects/Student__c/fields/Related_College_Number__c.field-meta.xml
<CustomField>
    <fullName>Related_College_Number__c</fullName>
    <formula>College__r.College_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related  College Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>