force-app/main/default/objects/Student__c/fields/VISA__c.field-meta.xml
<CustomField>
    <fullName>VISA__c</fullName>
    <label>VISA</label>
    <length>20</length>
    <type>Text</type>
</CustomField>