force-app/main/default/objects/Student__c/validationRules/DiscountLimitoffiveK.validationRule-meta.xml
<ValidationRule>
    <fullName>DiscountLimitoffiveK</fullName>
    <active>false</active>
    <errorConditionFormula>Discount__c &gt; 4999</errorConditionFormula>
    <errorMessage>Discount  should be less then 5K USD</errorMessage>
</ValidationRule>