force-app/main/default/objects/Student__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Discount__c</columns>
    <columns>Related_College_Number__c</columns>
    <columns>College__c</columns>
    <columns>Branch__c</columns>
    <columns>DOB__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>