force-app/main/default/objects/Student__c/listViews/INDIAN.listView-meta.xml
<ListView>
    <fullName>INDIAN</fullName>
    <columns>NAME</columns>
    <columns>Branch__c</columns>
    <columns>College__c</columns>
    <columns>Discount__c</columns>
    <columns>DOB__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Student__c.INDIAN</value>
    </filters>
    <label>INDIAN</label>
</ListView>